Fix the image results scaling on mobile devices

--- a/static/style.css
+++ b/static/style.css
@@ -429,8 +429,8 @@ img {
     display: none;
   }
 
-  #images img {
-    width: 80vw;
+  #images div img {
+    width: 85vw;
     height: auto;
   }
 }
